# GreenImpactFund

./: .gitignore  Pipfile  README.md
backend/: pyproject.toml  render-build.sh  render.yaml  requirements.txt
backend/app/: app.py  config.py
backend/app/extensions/: extensions.py
backend/app/models/: models.py
backend/app/routes/: auth.py  donations.py  organizations.py  stories.py
backend/migrations/: README
backend/migrations/versions/: ed2701c9cd67_initial_migration.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: DonationForm.js  Donations.js  Navbar.js  PageWrapper.js  Snackbar.js
frontend/src/pages/: Dashboard.js  DonationImpact.js  Donations.js  Home.js  Login.js  NotFound.js  Organizations.js  Profile.js  SettingsDashboard.js  Signup.js  Stories.js
frontend/src/redux/slices/: authSlice.js
frontend/src/styles/: global.css  theme.js
frontend/src/utils/: api.js
mazingira-backend/app/: app.py  config.py
mazingira-backend/app/models/: models.py
mazingira-backend/app/routes/: auth.py  donations.py
