[tool.poetry]
name = "greenimpactfund-backend"
version = "0.1.0"
description = "eco-donation platform"
authors = ["Michael Akoko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
